--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Desafio-Landing-Page---VTEX/new/Development"] 
-  path = Desafio-Landing-Page---VTEX/new/Development 
-  url = git://https://github.com/EwertonCXavier/Desafio-Landing-Page---VTEX/new/Development
+submodule "/Desafio-Landing-Page---VTEX"] 
+  path = /Desafio-Landing-Page---VTEX 
+  url = git://https://github.com/EwertonCXavier/Desafio-Landing-Page---VTEX
